# tiny-utf8

./: CMakeLists.txt  LICENSE  README.md
examples/: hello.txt  hello.txt.out  reader.cpp  unicode.txt
include/: tiny_utf8.h
